--- a/src/assets/styles/ruoyi.scss
+++ b/src/assets/styles/ruoyi.scss
@@ -169,14 +169,14 @@
   margin-left: 5px;
 }
 
-.new {
-  PADDING-RIGHT: 10px;
-  PADDING-LEFT: 10px;
-  FONT-SIZE: 16px;
-  PADDING-BOTTOM: 5px;
-  LINE-HEIGHT: 2;
-  PADDING-TOP: 5px;
-}
+//.new {
+//  PADDING-RIGHT: 10px;
+//  PADDING-LEFT: 10px;
+//  FONT-SIZE: 16px;
+//  PADDING-BOTTOM: 5px;
+//  LINE-HEIGHT: 2;
+//  PADDING-TOP: 5px;
+//}
 
 .el-table .el-dropdown, .el-icon-arrow-down {
   font-size: 12px;
