--- a/src/assets/styles/ruoyi.scss
+++ b/src/assets/styles/ruoyi.scss
@@ -16,6 +16,10 @@
   padding-bottom: 5px;
 }
 
+.pl20 {
+  padding-left: 20px;
+}
+
 .mt1 {
   margin-top: 1px;
 }
@@ -77,14 +81,25 @@
   padding: 10px;
 }
 
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
 }
 
-.el-message-box__status + .el-message-box__message {
+.el-message-box__status+.el-message-box__message {
   word-break: break-word;
 }
 
@@ -100,7 +115,9 @@
 }
 
 .el-table {
-  .el-table__header-wrapper, .el-table__fixed-header-wrapper {
+
+  .el-table__header-wrapper,
+  .el-table__fixed-header-wrapper {
     th {
       word-break: break-word;
       background-color: #f8f8f9;
@@ -111,7 +128,7 @@
   }
 
   .el-table__body-wrapper {
-    .el-button [class*="el-icon-"] + span {
+    .el-button [class*="el-icon-"]+span {
       margin-left: 1px;
     }
   }
@@ -149,10 +166,11 @@
 }
 
 @media (max-width: 768px) {
-  .pagination-container .el-pagination > .el-pagination__jump {
+  .pagination-container .el-pagination>.el-pagination__jump {
     display: none !important;
   }
-  .pagination-container .el-pagination > .el-pagination__sizes {
+
+  .pagination-container .el-pagination>.el-pagination__sizes {
     display: none !important;
   }
 }
@@ -164,7 +182,8 @@
 }
 
 /** 表格更多操作下拉样式 */
-.el-table .el-dropdown-link, .el-table .el-dropdown-selfdefine {
+.el-table .el-dropdown-link,
+.el-table .el-dropdown-selfdefine {
   cursor: pointer;
   margin-left: 5px;
 }
@@ -178,15 +197,16 @@
 //  PADDING-TOP: 5px;
 //}
 
-.el-table .el-dropdown, .el-icon-arrow-down {
+.el-table .el-dropdown,
+.el-icon-arrow-down {
   font-size: 12px;
 }
 
-.el-tree-node__content > .el-checkbox {
+.el-tree-node__content>.el-checkbox {
   margin-right: 8px;
 }
 
-.list-group-striped > .list-group-item {
+.list-group-striped>.list-group-item {
   border-left: 0;
   border-right: 0;
   border-radius: 0;
@@ -309,5 +329,3 @@
   position: relative;
   float: right;
 }
-
-
