--- a/src/assets/fonts/fonts.css
+++ b/src/assets/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'FangZKaiTi'; /* 替换为你的字体名称 */
-  src: url('FangZhengKaiTiJianTi-1.woff2') format('woff2'); /* 替换为你的字体文件路径和格式 */
+  src: url('simkai.woff2') format('woff2'); /* 替换为你的字体文件路径和格式 */
   font-weight: normal;
   font-style: normal;
 }
